<resources>
    <string name="app_name">EZ Launcher</string>
    <string name="action_settings">Settings</string>

    <string name="apps">All Applications</string>
    <string name="maps">Maps</string>
    <string name="camera">Camera</string>
    <string name="settings">Settings</string>
    <string name="phone">Phone</string>
    <string name="people">People</string>
    <string name="gallery">Gallery</string>
    <string name="calendar">Calendar</string>
    <string name="email">Email</string>
    <string name="magnifier">Magnifier</string>
    <string name="music">Music</string>
    <string name="internet">Internet</string>
    <string name="sms">Text</string>
    <string name="app_not_found">App Not Found</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="clock">Clock</string>
    <string name="sos">SOS</string>
    <string name="flash_light">Flash Light</string>
    <string name="most_recent">Most Recent</string>
    <string name="all_applications">All Applications</string>
    <string name="contacts">Contacts</string>
    <string name="calculator">Calculator</string>

    <string name="button_color_description">contrast</string>
    <string name="button_zoom_description">zoom</string>
    <string name="button_flash_description">flashlight</string>
    <string name="text_autofocus_enabled">Autofocus enabled</string>
    <string name="text_autofocus_disabled">Autofocus disabled</string>
    <string name="ez_magnifier">EZ Magnifier</string>
    <string name="share">Share</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="close">close</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="invite_your_friends_and_you_ll_both_get_5">Invite your friends and you\'ll both get $5</string>
    <string name="give_5_get_5">Give $5, get $5</string>
    <string name="send_invites">Send Invites</string>
    <string name="accepted_invites">Accepted Invites</string>
    <string name="battery_percent">%1$s%%</string>
    <string name="search">Search</string>
</resources>
