<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_home"
            android:checked="true"
            android:icon="@drawable/ic_settings"
            android:title="@string/home" />

        <item
            android:id="@+id/drawer_favourite"
            android:icon="@drawable/ic_favorite"
            android:title="@string/favorite" />

        <item
            android:id="@+id/drawer_share"
            android:icon="@drawable/ic_share"
            android:title="@string/share" />

        <item
            android:id="@+id/drawer_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />

    </group>
</menu>