<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="false"
    android:keepScreenOn="true"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <FrameLayout
        android:id="@+id/camera_preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>

    <ImageButton
        android:id="@+id/button_color"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height_secondary"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/button_circle_brightness"
        android:contentDescription="@string/button_color_description"
        android:elevation="8dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_zoom"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:src="@drawable/ic_brightness_half"
        tools:targetApi="lollipop" />

    <ImageButton
        android:id="@+id/button_zoom"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height_primary"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="@drawable/button_circle_zoom"
        android:contentDescription="@string/button_zoom_description"
        android:elevation="4dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_flash"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_color"
        app:srcCompat="@drawable/ic_zoom"
        tools:targetApi="lollipop" />

    <ImageButton
        android:id="@+id/button_flash"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height_secondary"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/button_circle_flash"
        android:contentDescription="@string/button_flash_description"
        android:elevation="8dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_zoom"
        tools:src="@drawable/ic_circle"
        tools:targetApi="lollipop" />

</androidx.constraintlayout.widget.ConstraintLayout>